# zephyr

./: west.yml
arch/arc/core/: irq_manage.c
drivers/clock_management/: clock_management_common.c
drivers/flash/: CMakeLists.txt  Kconfig.mspi  flash_mspi_nor.c  flash_mspi_nor.h
drivers/gpio/: gpio_pca_series.c
drivers/i2c/: i2c_dw.c  i2c_ll_stm32.c  i2c_ll_stm32.h  i2c_ll_stm32_v2.c
drivers/led/: CMakeLists.txt  Kconfig  Kconfig.is31fl3733  is31fl3733.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/tcn75a/: CMakeLists.txt  Kconfig  tcn75a.c  tcn75a.h  tcn75a_trigger.c
drivers/smbus/: smbus_stm32.c
drivers/usb/device/: Kconfig  usb_dc_kinetis.c
dts/arm/nxp/: nxp_k22fxq512.dtsi
dts/bindings/led/: issi,is31fl3733.yaml
dts/bindings/sensor/: microchip,tcn75a.yaml
include/zephyr/: kernel.h
include/zephyr/drivers/: clock_management.h  i2c.h  smbus.h
include/zephyr/drivers/clock_management/: clock.h  clock_driver.h
include/zephyr/drivers/led/: is31fl3733.h
kernel/: init.c
samples/drivers/led_is31fl3733/: CMakeLists.txt  Kconfig  README.rst
samples/drivers/led_is31fl3733/boards/: frdm_k22f.overlay
samples/drivers/led_is31fl3733/src/: main.c
samples/sensor/tcn75a/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/sensor/tcn75a/boards/: frdm_k22f.overlay
samples/sensor/tcn75a/src/: main.c
scripts/ci/: check_compliance.py
scripts/dts/: gen_defines.py
scripts/pylib/twister/twisterlib/: handlers.py
scripts/tests/twister/: test_handlers.py  test_hardwaremap.py
scripts/west_commands/: run_common.py
(+8 files in other folders)
